WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119597
[EME] setMediaKeys function as defined in the EME specification does not work
https://bugs.webkit.org/show_bug.cgi?id=119597
Summary
[EME] setMediaKeys function as defined in the EME specification does not work
Jer Noble
Reported
2013-08-08 15:01:55 PDT
[EME] setMediaKeys function as defined in the EME specification does not work
Attachments
Patch
(2.93 KB, patch)
2013-08-08 15:10 PDT
,
Jer Noble
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-08-08 15:02:26 PDT
<
rdar://problem/14688700
>
Jer Noble
Comment 2
2013-08-08 15:10:10 PDT
Created
attachment 208373
[details]
Patch
Jer Noble
Comment 3
2013-08-08 15:12:33 PDT
https://dvcs.w3.org/hg/html-media/raw-file/tip/encrypted-media/encrypted-media.html#dom-setmediakeys
Jer Noble
Comment 4
2013-08-08 15:28:24 PDT
Committed
r153851
: <
http://trac.webkit.org/changeset/153851
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug