[EME] setMediaKeys function as defined in the EME specification does not work https://bugs.webkit.org/show_bug.cgi?id=119597

Reviewed by Anders Carlsson.

Source/WebCore:

No new tests; updated media/encrypted-media/encrypted-media-v2-syntax.html

Rename the mediaKeys attribute 'keys' and make readonly, and add an explicit
setMediaKeys() method in HTMLMediaElement's IDL.

* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::keys):
* html/HTMLMediaElement.idl:

LayoutTests:

* media/encrypted-media/encrypted-media-v2-syntax-expected.txt:
* media/encrypted-media/encrypted-media-v2-syntax.html:

Canonical link: https://commits.webkit.org/137557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153851 268f45cc-cd09-0410-ab3c-d52691b4dbfc